# AI-SWE-Bench-Sota-SWE

./: .env.example  .gitignore  README.md  TODO.md  evaluation.py  evaluation_runner.py  full_run.sh  inference.py  pyproject.toml  requirements.txt  run_agent_outside_container.py  run_benchmark.sh  run_infer.py  streamlit_dashboard.py  streamlit_runner.py  swe_runner.py
agent/: agent.py  agent_dev.py  agent_state.py  agent_state2.py  agent_with_state_reset copy.py  agent_with_state_reset.py  example_agent.py  prompts.py  requirements.txt
agent/agentpress/: base_processors.py  llm.py  llm_response_processor.py  standard_results_adder.py  state_manager.py  thread_manager.py  tool.py  xml_results_adder.py  xml_tool_parser.py
agent/agentpress_old/: llm.py  thread_manager.py  thread_viewer_ui.py
agent/tools/: bash_tool.py  edit_and_run_tool.py  edit_tool.py  files_tool.py  repo_tool.py  report_tool.py  shared_knowledge_tool.py  submit_with_summary_tool.py  summary_tool.py  terminal_tool.py
git_agent_cli/: README.md
swe_bench/: streamlit_dashboard.py  streamlit_runner.py  swe_runner.py
swe_bench/utils/: clone_repo.py  count_tokens.py  full_run.sh  metadata.yml  run_docker_bash.py
tests/: test_xml_parser.py
utils/: analyze_data_set.py  clone_s3_aws.py  copy_host_to_local.sh  diff_claude_openhands.json  download_s3_trajs.py  example_output.jsonl  get_swing_testcases_list.py  git_diff_to_jsonl.py
