[tool.poetry]
name = "kortix-swe-bench-sota"
version = "0.1.0"
description = ""
authors = ["dat-lequoc <dat@kortix.ai>", "marko-kraemer <marko@kortix.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = ">=8.0.0"
docker = ">=6.1.2"
pygithub = ">=1.55"
asyncio = "^3.4.3"
langfuse = "^2.53.9"
litellm = "^1.52.10"
python-dotenv = "^1.0.1"
openai = "^1.54.5"
pytest = "^8.3.3"
streamlit-autorefresh = "^1.0.1"
swebench = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
